# semantic-stixels

./: CMakeLists.txt  README.md  cost_function.h  draw.cpp  draw.h  main.cpp  matrix.h  semantic_stixels.cpp  semantic_stixels.h  semi_global_matching.cpp  semi_global_matching.h
camera_parameters/: cityscapes.xml  kitti.xml
enet/: colors.txt  geometry.txt
